# factom-rewrite

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  default_config.yml
configuration/: Cargo.toml  cli.yml  default_config.yml
configuration/src/: lib.rs
configuration/tests/: cl_tests.rs  nondefaults.yml
doc/: building-factom.md
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: entry.rs  entry_credit.rs  factoid.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: build.sh  init.sh
scripts/ci/: Dockerfile
service/: Cargo.toml
service/src/: chain_spec.rs  lib.rs  wrapper.rs
src/: main.rs
