[package]
name = "factomd-configuration"
version = "0.1.0"
authors = ["Thomas Meier <tom@hunter-wolf.com>"]
edition = "2018"
description = "Configuration gathering for factomd"

[dependencies]
clap = { version = "2.32.0", default-features = false }
structopt = "0.2.18"
config = "0.9.3"
slog = "^2"
serde = { version = "1.0", features = ["derive"] }
