[package]
name = "factomd-service"
version = "0.1.0"
authors = ["Thomas Meier <tom@hunter-wolf.com>"]
edition = "2018"
description = "The Factom service that utilizes the Substrate service"
build = "build.rs"

[dependencies]
factomd-rpc = { path = "../rpc" }
factomd-configuration = { path = "../configuration" }
exit-future = '0.1'
futures = '0.1'
clap = "~2.32"
tokio = '0.1'
slog = "^2"
slog-async = "^2"
slog-term = "^2"

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'fc206f3a009b64fc746202e5b4c701bf7e24d1f1'

[dependencies.factomd-runtime]
path = '../runtime'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[build-dependencies]
vergen = '3'