[package]
name = "factom-runtime-wasm"
version = "1.0.0"
authors = ["Thomas Meier <tom@hunter-wolf.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []